[gd_scene load_steps=6 format=3 uid="uid://bpdfkdilgr0dt"]

[ext_resource type="Script" uid="uid://c3fo5f2bd236o" path="res://ui/GameUI.gd" id="1_0b514"]
[ext_resource type="PackedScene" uid="uid://4qurwmwm1hfv" path="res://ui/scores/ScoresUI.tscn" id="1_ye8ga"]
[ext_resource type="PackedScene" uid="uid://bjejhuy3nuap6" path="res://ui/DiceTray.tscn" id="2_0b514"]
[ext_resource type="Theme" uid="uid://32y1bscp3t30" path="res://theme/theme_secondary.tres" id="3_55grj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0b514"]

[node name="MainUI" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_0b514")
script = ExtResource("1_0b514")

[node name="VContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="ScoresUi" parent="VContainer" instance=ExtResource("1_ye8ga")]
layout_mode = 2

[node name="DiceTray" parent="VContainer" instance=ExtResource("2_0b514")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MenuButton" type="Button" parent="VContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_55grj")
theme_override_font_sizes/font_size = 50
text = "  SCORES  "

[node name="RollButton" type="Button" parent="VContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 175)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 50
text = "LANCER"

[connection signal="pressed" from="VContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VContainer/HBoxContainer/RollButton" to="." method="_on_roll_button_pressed"]
